Test/git-issues/git-issue-321.dfy.expect
git-issue-321.dfy(20,20): Error: type array<int> is not assignable to LHS (of type array<nat>) (nonvariance for type parameter expects int <: nat)
1 resolution/type errors detected in git-issue-321.dfy
